<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="custom_tip_percentage">Custom%</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">15%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="eighten_percent">18%</string>
    <string name="numOfPeople">Number of people</string>
    <string name="AmtPerPerson">Amount/person</string>
    <string name="tax">Include Tax</string>

</resources>
