<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:columnCount="10"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="22"
    android:useDefaultMargins="true"
    tools:context="com.deitel.tipcalculator.MainActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_column="0"
        android:layout_gravity="top"
        android:layout_row="0"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customPercentageTextView"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/custom_tip_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:max="30"
        android:progress="18" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|right|top"
        android:layout_row="2"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fifteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/eighten_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

   <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:layout_column="1" >

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="4"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

     <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_width="31dp"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:layout_column="1" >

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
           android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:inputType="number"
        android:maxLength="6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amountDisplayTextView"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="top"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/numberOfPeople"
        android:layout_width="94dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:labelFor="@+id/peopleNum"
        android:text="@string/numOfPeople"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/peopleNum"
        android:layout_width="244dp"
        android:layout_height="44dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="5"
        android:background="@android:color/holo_blue_bright"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/amounttPerPerson"
        android:layout_width="64dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="21"
        android:text="@string/AmtPerPerson"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/amountPerPerson"
        android:layout_width="222dp"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/amountPerPerson15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:layout_weight="0.37"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding" />

        <TextView
            android:id="@+id/amountPerPersonCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:layout_weight="0.32"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/tax"
        android:layout_column="1"
        android:layout_gravity="left|center_vertical"
        android:layout_row="21"
        android:text="@string/tax" />

</GridLayout>